...
            name="ProfileEditViewmodel"
            type="de.psekochbuch.exzellenzkoch.userinterfacelayer.viewmodel.ProfileEditViewmodel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="646dp"
            app:layout_constraintBottom_toTopOf="@+id/button_save_profile_changes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageView_user_img"
                    android:layout_width="match_parent"
                    android:layout_height="407dp"
                    android:cropToPadding="true"
                    app:srcCompat="@android:color/holo_green_light" />

                <EditText
                    android:id="@+id/textView_enter_userID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_user_id"
                    android:inputType="text"
                    android:padding="10dp"
                    android:text="@={ProfileEditViewmodel.userID}"
...
